--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!--
-    Version: 3.2.0 (Fixed)
+    Version: 3.3.0 (V3 Refactored)
     Framework: Page Express V3 (Tier 2) + Express Core (Tier 1)
+    Last Modified: 2025-11-24
+    Author: Maxim
     Theme: CHUU - Pastel Dream
 -->
 <!DOCTYPE html>
@@ -9,24 +11,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- SEO & Metadata -->
+    <!-- SEO & Metadata (Tier 3) -->
     <title data-lang="site_title">CHUU - 주문 제작 케이크 & 쿠키</title>
     <meta name="description" data-lang="meta_description" content="달콤한 순간을 선물하는 CHUU의 특별한 주문 제작 케이크와 수제 쿠키를 만나보세요.">
+    <meta name="keywords" content="레터링 케이크, 포토 케이크, 입체 케이크, 수제 쿠키, 주문 제작 케이크, 기념일 케이크, 답례품 쿠키, CHUU">
     <link rel="canonical" href="https://www.chuu.kr/">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.chuu.kr/">
+    <meta property="og:title" data-lang="og_title" content="CHUU - 주문 제작 케이크 & 쿠키">
+    <meta property="og:description" data-lang="og_description" content="달콤한 순간을 선물하는 CHUU의 특별한 주문 제작 케이크와 수제 쿠키를 만나보세요.">
+    <meta property="og:image" content="./section/home/1.jpg">
+    <meta property="og:site_name" content="CHUU">
+
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Poppins:wght@400;600;700&family=Fredoka+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
-    <!-- [Tier 1] Express Core V3 -->
-    <link rel="stylesheet" href="https://cdn.9style.com/_inc/express/express-v3.css">
-    <script src="https://cdn.9style.com/_inc/express/express-v3.js"></script>
+    <!-- [Tier 1] Express Core V3.3 -->
+    <link rel="stylesheet" href="./express-v3.css">
+    <script src="./express-v3.js"></script>
 
-    <!-- [Tier 2] Page Express V3 -->
-    <link rel="stylesheet" href="https://cdn.9style.com/_inc/express/page/page-v3.css">
-    <script src="https://cdn.9style.com/_inc/express/page/page-v3.js"></script>
+    <!-- [Tier 2] Page Express V3.3 -->
+    <link rel="stylesheet" href="./page-v3.css">
+    <script src="./page-v3.js"></script>
 
-    <!-- [Tier 3] User Theme (반드시 마지막에 로드) -->
+    <!-- [Tier 3] User Theme & Config -->
     <link rel="stylesheet" href="./lay.css">
     <script src="./lay.js" defer></script>
 </head>
@@ -36,15 +49,16 @@
         <div class="pe-nav__container">
             <a href="#home" class="pe-nav__logo" data-lang="logo_text">CHUU</a>
             <div class="pe-nav__buttons">
-                <!-- [Tier 1] 언어 전환 버튼 자동 생성 위치 -->
-                <div id="ex-lang"></div>
+                <div id="lang-switcher">
+                    <button data-lang-set="ko" class="active">KO</button>
+                    <button data-lang-set="en">EN</button>
+                </div>
             </div>
         </div>
     </nav>
 
-    <!-- Header (Canvas Binding) -->
-    <!-- [Tier 1] id="ex-canvas" 필수: 배경, 이펙트, 타이틀 자동 제어 -->
-    <header id="ex-canvas" class="pe-header">
+    <!-- Header (Canvas Area) -->
+    <header id="home" class="pe-header">
         <div class="pe-header__content js-parallax-content">
             <h1 class="pe-header__title home-logo">CHUU</h1>
             <p class="pe-header__subtitle" data-lang="home_subtitle">당신의 달콤한 순간을 만들어요</p>
@@ -52,20 +66,20 @@
     </header>
 
     <main>
-        <!-- Overview (Auto-Injection Target) -->
-        <!-- [Tier 2] Demo Mode 활성화 시 하단 안내 문구 자동 삽입됨 -->
+        <!-- Overview -->
         <section id="overview" class="pe-section js-fade-in">
             <div class="pe-container">
                 <h2>
                     <span translate="no" class="material-symbols-outlined notranslate">cake</span>
                     <span data-lang="overview_title">사랑을 담아, CHUU</span>
                 </h2>
-                <p class="pe-section__description" data-lang="overview_desc"></p>
+                <p class="pe-section__description" data-lang="overview_desc">정성껏 만든 케이크와 쿠키로 당신의 모든 날을 기념일처럼 특별하게 만들어 드립니다.</p>
+                <p class="pe-demo-msg" data-lang="ex_demo_msg_overview"></p>
             </div>
         </section>
 
-        <!-- Promotion (Parallax) -->
-        <section id="promotion" class="pe-section js-fade-in pe-section--dynamic pe-section--parallax" style="background-image: url('./section/promotion/bg.jpg');">
+        <!-- Promotion -->
+        <section id="promotion" class="pe-section js-fade-in pe-section--dynamic" style="background-image: url('./section/promotion/bg.jpg');">
             <div class="pe-overlay pe-overlay--dotted"></div>
             <div class="pe-container">
                 <div class="pe-grid pe-grid--cols-1">
@@ -91,7 +105,7 @@
 
                 <div class="pe-slider js-content-slider">
                     <div class="pe-slider__wrapper">
-                        <!-- Cookie 01 -->
+                        <!-- Cookie Items (Dynamic rendered or static as needed) -->
                         <div class="pe-slider__item">
                             <div class="pe-card">
                                 <div class="pe-card__image-wrapper js-lightbox-trigger"><img src="./section/cookies/01.jpg" alt="Cookie 01" class="pe-card__image"></div>
@@ -104,14 +118,9 @@
                                         <span class="pe-price-info__label" data-lang="cookies_price_label_3pack"></span>
                                         <span class="pe-price-info__value" data-lang="cookies_01_price_3pack"></span>
                                     </div>
-                                    <div class="pe-price-info__item">
-                                        <span class="pe-price-info__label" data-lang="cookies_price_label_6pack"></span>
-                                        <span class="pe-price-info__value" data-lang="cookies_01_price_6pack"></span>
-                                    </div>
                                 </div>
                             </div>
                         </div>
-                         <!-- Cookie 02 -->
                         <div class="pe-slider__item">
                             <div class="pe-card">
                                 <div class="pe-card__image-wrapper js-lightbox-trigger"><img src="./section/cookies/02.jpg" alt="Cookie 02" class="pe-card__image"></div>
@@ -127,7 +136,6 @@
                                 </div>
                             </div>
                         </div>
-                         <!-- Cookie 03 -->
                          <div class="pe-slider__item">
                             <div class="pe-card">
                                 <div class="pe-card__image-wrapper js-lightbox-trigger"><img src="./section/cookies/03.jpg" alt="Cookie 03" class="pe-card__image"></div>
@@ -151,8 +159,10 @@
                     </div>
                 </div>
 
-                <!-- [Tier 2] Dynamic Content (FAQ) -->
-                <div class="pe-faq-container" data-content-type="faq" data-prefix="faq_cookie"></div>
+                <div class="pe-faq-container">
+                    <h3 class="pe-faq-title" data-lang="faq_title">FAQ</h3>
+                    <div class="pe-faq-list" data-content-type="faq" data-prefix="faq_cookie" data-dynamic-area></div>
+                </div>
             </div>
         </section>
 
@@ -167,8 +177,7 @@
                         <div class="pe-card__content">
                             <h3 class="pe-card__title" data-lang="cakes_lettering_title"></h3>
                             <p class="pe-card__description" data-lang="cakes_lettering_desc"></p>
-                            <!-- [Tier 2] Dynamic Content (Product) -->
-                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_lettering_option"></div>
+                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_lettering_option" data-dynamic-area></div>
                         </div>
                         <div class="pe-price-info">
                             <div class="pe-price-info__item">
@@ -182,7 +191,7 @@
                         <div class="pe-card__content">
                             <h3 class="pe-card__title" data-lang="cakes_photo_title"></h3>
                             <p class="pe-card__description" data-lang="cakes_photo_desc"></p>
-                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_photo_option"></div>
+                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_photo_option" data-dynamic-area></div>
                         </div>
                         <div class="pe-price-info">
                             <div class="pe-price-info__item">
@@ -196,7 +205,7 @@
                         <div class="pe-card__content">
                             <h3 class="pe-card__title" data-lang="cakes_3d_title"></h3>
                             <p class="pe-card__description" data-lang="cakes_3d_desc"></p>
-                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_3d_option"></div>
+                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_3d_option" data-dynamic-area></div>
                         </div>
                         <div class="pe-price-info">
                             <div class="pe-price-info__item">
@@ -206,8 +215,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- [Tier 2] Dynamic Content (FAQ) -->
-                <div class="pe-faq-container" data-content-type="faq" data-prefix="faq_cake"></div>
             </div>
         </section>
 
@@ -215,7 +222,6 @@
         <section id="process" class="pe-section js-fade-in section-divider to-secondary">
             <div class="pe-container">
                 <h2><span translate="no" class="material-symbols-outlined notranslate">list_alt</span><span data-lang="process_title"></span></h2>
-                <p class="pe-section__description" data-lang="process_desc"></p>
                 <div class="pe-process-grid">
                     <div class="pe-process-item">
                         <div class="pe-process-item__icon"><span class="material-symbols-outlined">edit_square</span></div>
@@ -238,13 +244,6 @@
                         <p class="pe-process-item__description" data-lang="process_04_desc"></p>
                     </div>
                 </div>
-                
-                <!-- [V3.2] Link to Auto-Injected Demo Section -->
-                <div class="pe-button-group">
-                    <a href="#demo" class="pe-button" data-lang-href="order_button_url" rel="noopener noreferrer">
-                        <span data-lang="order_button"></span>
-                    </a>
-                </div>
             </div>
         </section>
 
@@ -252,7 +251,6 @@
         <section id="media" class="pe-section js-fade-in section-divider to-primary">
             <div class="pe-container">
                 <h2><span translate="no" class="material-symbols-outlined notranslate">smart_display</span><span data-lang="media_title"></span></h2>
-                <p class="pe-section__description" data-lang="media_desc"></p>
                 <div class="pe-grid pe-grid--cols-1">
                     <div class="pe-card">
                         <video class="pe-card__video" controls poster="./section/media/01.jpg" src="./section/media/01.mp4">
@@ -276,7 +274,7 @@
             </div>
         </section>
 
-        <!-- Profile (Auto-Injection Target) -->
+        <!-- Profile -->
         <section id="profile" class="pe-section js-fade-in section-divider to-primary">
             <div class="pe-container">
                 <h2><span translate="no" class="material-symbols-outlined notranslate">contact_mail</span><span data-lang="profile_title"></span></h2>
@@ -291,51 +289,80 @@
                         <a href="mailto:chuu@chuu.kr" class="pe-contact-list__value" data-lang="email_address" data-lang-href="email_href"></a>
                     </div>
                 </div>
+                <p class="pe-demo-msg" data-lang="ex_demo_msg_profile"></p>
             </div>
         </section>
 
-        <!-- Contact Form (Standardized) -->
+        <!-- Contact Form -->
         <section id="contact" class="pe-section js-fade-in section-divider to-secondary">
-            <div class="pe-container">
+            <!-- [V3.3 ID Binding] #ex-contact -->
+            <div id="ex-contact" class="pe-container">
                 <h2>
                     <span translate="no" class="material-symbols-outlined notranslate">mail</span>
                     <span data-lang="ex_contact_title">문의하기</span>
                 </h2>
                 <p class="pe-section__description" data-lang="ex_contact_desc">담당자가 확인 후 이메일 회신 드립니다.</p>
-                
-                <!-- [Tier 1] ID 바인딩: 엔진이 폼 자동 생성 (하드코딩 삭제됨) -->
-                <div id="ex-contact"></div>
+
+                <!-- Custom Form HTML Retained for CHUU Theme Design -->
+                <form class="pe-form pe-contact-form" autocomplete="off" data-demo-mode="true">
+                    <input type="email" name="email" required class="pe-form__input" data-lang-placeholder="ex_placeholder_email" placeholder="Email">
+                    <div class="pe-form__textarea-wrapper">
+                        <textarea name="message" rows="5" required maxlength="1024" class="pe-form__textarea" data-lang-placeholder="ex_placeholder_msg" placeholder="Message"></textarea>
+                        <div class="pe-form__char-counter">0/1024</div>
+                    </div>
+                    <button type="submit" class="pe-form__submit">
+                        <span class="pe-form__text" data-lang="ex_btn_submit">보내기</span>
+                    </button>
+                    <div class="pe-form__status"></div>
+                </form>
             </div>
         </section>
 
-        <!-- Search Form (Standardized) -->
+        <!-- Search Form -->
         <section id="search" class="pe-section js-fade-in section-divider to-primary">
-            <div class="pe-container">
+            <!-- [V3.3 ID Binding] #ex-search -->
+            <div id="ex-search" class="pe-container">
                 <h2>
                     <span translate="no" class="material-symbols-outlined notranslate">search</span>
                     <span data-lang="ex_search_title">검색</span>
                 </h2>
                 <p class="pe-section__description" data-lang="ex_search_desc"></p>
 
-                <!-- [Tier 1] ID 바인딩: 엔진이 폼 자동 생성 (하드코딩 삭제됨) -->
-                <div id="ex-search"></div>
+                <!-- Custom Form HTML Retained for CHUU Theme Design -->
+                <form class="pe-form pe-search-form" autocomplete="off" data-demo-mode="true">
+                    <input type="text" name="key" required class="pe-form__input" data-lang-placeholder="ex_placeholder_search" placeholder="Search...">
+                    <button type="submit" class="pe-form__submit">
+                        <span class="pe-form__text" data-lang="ex_btn_search">검색</span>
+                    </button>
+                    <div class="pe-form__status"></div>
+                </form>
             </div>
         </section>
 
+        <!-- Request / Demo -->
+        <section id="demo" class="pe-section js-fade-in">
+            <div class="pe-container">
+                <h2><span translate="no" class="material-symbols-outlined notranslate">auto_awesome</span><span data-lang="ex_demo_title"></span></h2>
+                <p class="pe-section__description" data-lang="ex_demo_desc"></p>
+                <div class="pe-button-group">
+                    <a href="#" class="pe-button" data-lang="ex_demo_button" data-lang-href="ex_demo_button_url" rel="noopener noreferrer">
+                        문의하기
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
     <footer class="pe-footer">
         <div class="pe-container">
-            <!-- [Tier 1] 저작권 문구 자동 바인딩 -->
             <p class="render-as-html" data-lang="ex_copyright_text"></p>
+            <p><a data-lang-href="ex_footer_credit_url" rel="noopener noreferrer" data-lang="ex_footer_credit_text">Powered by Maxim</a></p>
         </div>
     </footer>
 
-    <!-- Utils -->
-    <div id="pe-top"></div>
-    <div id="ex-turnstile"></div>
-    <!-- [Tier 1] Action Group Auto-Injected via Config -->
-
+    <a href="#home" id="to-top-btn" class="hidden">
+        <span translate="no" class="material-symbols-outlined notranslate">arrow_upward</span>
+    </a>
 </body>
 </html>
