--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!--
-    Version: 3.3.0 (V3 Refactored)
-    Framework: Page Express V3 (Tier 2) + Express Core (Tier 1)
-    Last Modified: 2025-11-24
-    Author: Maxim
+    Tier 3: User Interior (Main Page)
+    Version: 4.0.0 (Migration Complete)
+    Framework: Page Express V4
     Theme: CHUU - Pastel Dream
+    Last Modified: 2025-12-07
+    License: © 2025 Maxim. All Rights Reserved.
 -->
 <!DOCTYPE html>
 <html lang="ko">
@@ -11,7 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- SEO & Metadata (Tier 3) -->
+    <!-- SEO & Metadata -->
     <title data-lang="site_title">CHUU - 주문 제작 케이크 & 쿠키</title>
     <meta name="description" data-lang="meta_description" content="달콤한 순간을 선물하는 CHUU의 특별한 주문 제작 케이크와 수제 쿠키를 만나보세요.">
     <meta name="keywords" content="레터링 케이크, 포토 케이크, 입체 케이크, 수제 쿠키, 주문 제작 케이크, 기념일 케이크, 답례품 쿠키, CHUU">
@@ -25,30 +26,56 @@
     <meta property="og:image" content="./section/home/1.jpg">
     <meta property="og:site_name" content="CHUU">
 
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Poppins:wght@400;600;700&family=Fredoka+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
-    <!-- [Tier 1] Express Core V3.3 -->
-    <link rel="stylesheet" href="./express-v3.css">
-    <script src="./express-v3.js"></script>
+    <!-- [Tier 1] Facility (Core) -->
+    <link rel="stylesheet" href="./express/express-v4.css">
+    <script src="./express/express-v4.js"></script>
 
-    <!-- [Tier 2] Page Express V3.3 -->
-    <link rel="stylesheet" href="./page-v3.css">
-    <script src="./page-v3.js"></script>
+    <!-- [Tier 2] Space (Page Framework) -->
+    <link rel="stylesheet" href="./express/page-v4.css">
+    <script src="./express/page-v4.js"></script>
 
-    <!-- [Tier 3] User Theme & Config -->
+    <!-- [Tier 3] Interior (User Config & Theme) -->
     <link rel="stylesheet" href="./lay.css">
     <script src="./lay.js" defer></script>
+
+    <!-- Schema.org -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Bakery",
+      "name": "CHUU",
+      "image": "https://www.chuu.kr/section/home/1.jpg",
+      "description": "정성껏 만든 케이크와 쿠키로 당신의 모든 날을 기념일처럼 특별하게 만들어 드립니다.",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "633 W 5th St",
+        "addressLocality": "Los Angeles",
+        "addressRegion": "CA",
+        "postalCode": "90071",
+        "addressCountry": "USA"
+      },
+      "url": "https://www.chuu.kr/",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "email": "chuu@chuu.kr",
+        "contactType": "customer service"
+      }
+    }
+    </script>
 </head>
 <body>
     <!-- Navigation -->
     <nav class="pe-nav">
-        <div class="pe-nav__container">
+        <div class="pe-nav__container pe-container">
             <a href="#home" class="pe-nav__logo" data-lang="logo_text">CHUU</a>
             <div class="pe-nav__buttons">
+                <!-- Language Switcher -->
                 <div id="lang-switcher">
                     <button data-lang-set="ko" class="active">KO</button>
                     <button data-lang-set="en">EN</button>
@@ -57,11 +84,12 @@
         </div>
     </nav>
 
-    <!-- Header (Canvas Area) -->
+    <!-- Header (Canvas Target) -->
     <header id="home" class="pe-header">
         <div class="pe-header__content js-parallax-content">
             <h1 class="pe-header__title home-logo">CHUU</h1>
             <p class="pe-header__subtitle" data-lang="home_subtitle">당신의 달콤한 순간을 만들어요</p>
+            <!-- Icon Buttons injected by JS -->
         </div>
     </header>
 
@@ -73,15 +101,17 @@
                     <span translate="no" class="material-symbols-outlined notranslate">cake</span>
                     <span data-lang="overview_title">사랑을 담아, CHUU</span>
                 </h2>
-                <p class="pe-section__description" data-lang="overview_desc">정성껏 만든 케이크와 쿠키로 당신의 모든 날을 기념일처럼 특별하게 만들어 드립니다.</p>
+                <p class="pe-section__description" data-lang="overview_desc"></p>
+                <!-- Demo Message -->
                 <p class="pe-demo-msg" data-lang="ex_demo_msg_overview"></p>
             </div>
         </section>
 
         <!-- Promotion -->
         <section id="promotion" class="pe-section js-fade-in pe-section--dynamic" style="background-image: url('./section/promotion/bg.jpg');">
+            <!-- Overlay managed by CSS class in Tier 3 if needed, or inline -->
             <div class="pe-overlay pe-overlay--dotted"></div>
-            <div class="pe-container">
+            <div class="pe-container" style="position: relative; z-index: 2;">
                 <div class="pe-grid pe-grid--cols-1">
                     <div class="pe-card pe-card--horizontal">
                         <div class="pe-card__image-wrapper">
@@ -105,7 +135,7 @@
 
                 <div class="pe-slider js-content-slider">
                     <div class="pe-slider__wrapper">
-                        <!-- Cookie Items (Dynamic rendered or static as needed) -->
+                        <!-- Cookie Items (1~3 for brevity, real site has more) -->
                         <div class="pe-slider__item">
                             <div class="pe-card">
                                 <div class="pe-card__image-wrapper js-lightbox-trigger"><img src="./section/cookies/01.jpg" alt="Cookie 01" class="pe-card__image"></div>
@@ -128,7 +158,7 @@
                                     <h3 class="pe-card__title" data-lang="cookies_02_title"></h3>
                                     <p class="pe-card__description" data-lang="cookies_02_desc"></p>
                                 </div>
-                                 <div class="pe-price-info">
+                                <div class="pe-price-info">
                                      <div class="pe-price-info__item">
                                         <span class="pe-price-info__label" data-lang="cookies_price_label_3pack"></span>
                                         <span class="pe-price-info__value" data-lang="cookies_02_price_3pack"></span>
@@ -136,14 +166,14 @@
                                 </div>
                             </div>
                         </div>
-                         <div class="pe-slider__item">
+                        <div class="pe-slider__item">
                             <div class="pe-card">
                                 <div class="pe-card__image-wrapper js-lightbox-trigger"><img src="./section/cookies/03.jpg" alt="Cookie 03" class="pe-card__image"></div>
                                 <div class="pe-card__content">
                                     <h3 class="pe-card__title" data-lang="cookies_03_title"></h3>
                                     <p class="pe-card__description" data-lang="cookies_03_desc"></p>
                                 </div>
-                                 <div class="pe-price-info">
+                                <div class="pe-price-info">
                                      <div class="pe-price-info__item">
                                         <span class="pe-price-info__label" data-lang="cookies_price_label_10pack"></span>
                                         <span class="pe-price-info__value" data-lang="cookies_03_price_10pack"></span>
@@ -154,14 +184,13 @@
                     </div>
                     <div class="pe-slider__nav">
                         <button class="pe-slider__nav-button pe-slider--prev" aria-label="Previous"><span class="material-symbols-outlined">arrow_back</span></button>
-                        <button class="pe-slider__nav-button pe-slider--play-pause" aria-label="Play/Pause"><span class="material-symbols-outlined">play_arrow</span></button>
                         <button class="pe-slider__nav-button pe-slider--next" aria-label="Next"><span class="material-symbols-outlined">arrow_forward</span></button>
                     </div>
                 </div>
 
                 <div class="pe-faq-container">
                     <h3 class="pe-faq-title" data-lang="faq_title">FAQ</h3>
-                    <div class="pe-faq-list" data-content-type="faq" data-prefix="faq_cookie" data-dynamic-area></div>
+                    <div class="pe-faq-list" data-content-type="faq" data-prefix="faq_cookie"></div>
                 </div>
             </div>
         </section>
@@ -172,12 +201,13 @@
                 <h2><span translate="no" class="material-symbols-outlined notranslate">brush</span><span data-lang="cakes_title"></span></h2>
                 <p class="pe-section__description" data-lang="cakes_desc"></p>
                 <div class="pe-grid">
+                    <!-- Lettering Cake -->
                     <div class="pe-card">
                         <div class="pe-card__image-wrapper js-lightbox-trigger"><img src="./section/cakes/01.jpg" alt="Lettering Cake" class="pe-card__image"></div>
                         <div class="pe-card__content">
                             <h3 class="pe-card__title" data-lang="cakes_lettering_title"></h3>
                             <p class="pe-card__description" data-lang="cakes_lettering_desc"></p>
-                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_lettering_option" data-dynamic-area></div>
+                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_lettering_option"></div>
                         </div>
                         <div class="pe-price-info">
                             <div class="pe-price-info__item">
@@ -186,12 +216,13 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Photo Cake -->
                     <div class="pe-card">
                         <div class="pe-card__image-wrapper js-lightbox-trigger"><img src="./section/cakes/02.jpg" alt="Photo Cake" class="pe-card__image"></div>
                         <div class="pe-card__content">
                             <h3 class="pe-card__title" data-lang="cakes_photo_title"></h3>
                             <p class="pe-card__description" data-lang="cakes_photo_desc"></p>
-                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_photo_option" data-dynamic-area></div>
+                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_photo_option"></div>
                         </div>
                         <div class="pe-price-info">
                             <div class="pe-price-info__item">
@@ -200,12 +231,13 @@
                             </div>
                         </div>
                     </div>
+                    <!-- 3D Cake -->
                     <div class="pe-card">
                         <div class="pe-card__image-wrapper js-lightbox-trigger"><img src="./section/cakes/03.jpg" alt="3D Cake" class="pe-card__image"></div>
                         <div class="pe-card__content">
                             <h3 class="pe-card__title" data-lang="cakes_3d_title"></h3>
                             <p class="pe-card__description" data-lang="cakes_3d_desc"></p>
-                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_3d_option" data-dynamic-area></div>
+                            <div class="pe-product-list" data-content-type="product" data-prefix="cake_3d_option"></div>
                         </div>
                         <div class="pe-price-info">
                             <div class="pe-price-info__item">
@@ -215,6 +247,10 @@
                         </div>
                     </div>
                 </div>
+                <div class="pe-faq-container">
+                    <h3 class="pe-faq-title" data-lang="faq_title">FAQ</h3>
+                    <div class="pe-faq-list" data-content-type="faq" data-prefix="faq_cake"></div>
+                </div>
             </div>
         </section>
 
@@ -222,6 +258,7 @@
         <section id="process" class="pe-section js-fade-in section-divider to-secondary">
             <div class="pe-container">
                 <h2><span translate="no" class="material-symbols-outlined notranslate">list_alt</span><span data-lang="process_title"></span></h2>
+                <p class="pe-section__description" data-lang="process_desc"></p>
                 <div class="pe-process-grid">
                     <div class="pe-process-item">
                         <div class="pe-process-item__icon"><span class="material-symbols-outlined">edit_square</span></div>
@@ -238,11 +275,16 @@
                         <h3 class="pe-process-item__title" data-lang="process_03_title"></h3>
                         <p class="pe-process-item__description" data-lang="process_03_desc"></p>
                     </div>
-                     <div class="pe-process-item">
+                    <div class="pe-process-item">
                         <div class="pe-process-item__icon"><span class="material-symbols-outlined">redeem</span></div>
                         <h3 class="pe-process-item__title" data-lang="process_04_title"></h3>
                         <p class="pe-process-item__description" data-lang="process_04_desc"></p>
                     </div>
+                </div>
+                <div class="pe-button-group">
+                    <a href="#" class="pe-button" data-lang-href="order_button_url" rel="noopener noreferrer">
+                        <span data-lang="order_button"></span>
+                    </a>
                 </div>
             </div>
         </section>
@@ -251,9 +293,10 @@
         <section id="media" class="pe-section js-fade-in section-divider to-primary">
             <div class="pe-container">
                 <h2><span translate="no" class="material-symbols-outlined notranslate">smart_display</span><span data-lang="media_title"></span></h2>
+                <p class="pe-section__description" data-lang="media_desc"></p>
                 <div class="pe-grid pe-grid--cols-1">
                     <div class="pe-card">
-                        <video class="pe-card__video" controls poster="./section/media/01.jpg" src="./section/media/01.mp4">
+                        <video class="pe-card__video" controls poster="./section/media/01.jpg" src="./section/media/01.mp4" style="width:100%">
                             Your browser does not support the video element.
                         </video>
                     </div>
@@ -295,16 +338,15 @@
 
         <!-- Contact Form -->
         <section id="contact" class="pe-section js-fade-in section-divider to-secondary">
-            <!-- [V3.3 ID Binding] #ex-contact -->
-            <div id="ex-contact" class="pe-container">
+            <div class="pe-container">
                 <h2>
                     <span translate="no" class="material-symbols-outlined notranslate">mail</span>
                     <span data-lang="ex_contact_title">문의하기</span>
                 </h2>
-                <p class="pe-section__description" data-lang="ex_contact_desc">담당자가 확인 후 이메일 회신 드립니다.</p>
+                <p class="pe-section__description" data-lang="ex_contact_desc"></p>
 
-                <!-- Custom Form HTML Retained for CHUU Theme Design -->
-                <form class="pe-form pe-contact-form" autocomplete="off" data-demo-mode="true">
+                <!-- V4 Hydration Target: pe-form -->
+                <form class="pe-form pe-contact-form" autocomplete="off">
                     <input type="email" name="email" required class="pe-form__input" data-lang-placeholder="ex_placeholder_email" placeholder="Email">
                     <div class="pe-form__textarea-wrapper">
                         <textarea name="message" rows="5" required maxlength="1024" class="pe-form__textarea" data-lang-placeholder="ex_placeholder_msg" placeholder="Message"></textarea>
@@ -320,16 +362,14 @@
 
         <!-- Search Form -->
         <section id="search" class="pe-section js-fade-in section-divider to-primary">
-            <!-- [V3.3 ID Binding] #ex-search -->
-            <div id="ex-search" class="pe-container">
+            <div class="pe-container">
                 <h2>
                     <span translate="no" class="material-symbols-outlined notranslate">search</span>
                     <span data-lang="ex_search_title">검색</span>
                 </h2>
                 <p class="pe-section__description" data-lang="ex_search_desc"></p>
 
-                <!-- Custom Form HTML Retained for CHUU Theme Design -->
-                <form class="pe-form pe-search-form" autocomplete="off" data-demo-mode="true">
+                <form class="pe-form pe-search-form" autocomplete="off">
                     <input type="text" name="key" required class="pe-form__input" data-lang-placeholder="ex_placeholder_search" placeholder="Search...">
                     <button type="submit" class="pe-form__submit">
                         <span class="pe-form__text" data-lang="ex_btn_search">검색</span>
@@ -339,7 +379,7 @@
             </div>
         </section>
 
-        <!-- Request / Demo -->
+        <!-- Request Standard -->
         <section id="demo" class="pe-section js-fade-in">
             <div class="pe-container">
                 <h2><span translate="no" class="material-symbols-outlined notranslate">auto_awesome</span><span data-lang="ex_demo_title"></span></h2>
